# PIAIC_Work

./: .gitignore  requirements.txt
Assignments/Batch-1/TypeScript/45 Questions Assignment/src/: index.ts
Assignments/Batch-2/Next.js/Assignment-10/image-generator/: package-lock.json
Assignments/Batch-2/Next.js/Assignment-10/image-generator/app/image-generator/: page.tsx
Assignments/Batch-2/Next.js/Assignment-2/html-to-nextjs/app/blog/: page.tsx
Assignments/Batch-2/Next.js/Assignment-5/registration-form/: package.json
Assignments/Batch-2/Next.js/Assignment-5/registration-form/app/: commontypes.ts
Assignments/Batch-2/Next.js/Assignment-6/expense-tracker/: package-lock.json
Assignments/Batch-2/Next.js/Assignment-7/api-intigeration/app/todos/: page.tsx
Assignments/Batch-2/Next.js/Assignment-8/cms-api/: package-lock.json
Assignments/Quarter-1/TypeScript/45 Questions Assignment/: tsconfig.json
Assignments/Quarter-1/TypeScript/Calculator in Typescript/: package-lock.json  package.json  tsconfig.json
Assignments/Quarter-1/TypeScript/Calculator in Typescript/src/: index.js  index.ts
Assignments/Quarter-2/Next.js/Assignment-2/html-to-nextjs/: package-lock.json  package.json
Assignments/Quarter-2/Next.js/Assignment-2/html-to-nextjs/app/: layout.tsx  page.tsx  style.css
Assignments/Quarter-2/Next.js/Assignment-2/html-to-nextjs/app/about/: page.tsx
Assignments/Quarter-2/Next.js/Assignment-2/html-to-nextjs/app/contact/: page.tsx
Assignments/Quarter-2/Next.js/Assignment-2/html-to-nextjs/app/course/: page.tsx
Assignments/Quarter-2/Next.js/Assignment-2/html-to-nextjs/app/home/: page.tsx
Assignments/Quarter-2/Next.js/Assignment-4/person-name/: package-lock.json  package.json
Assignments/Quarter-2/Next.js/Assignment-4/person-name/app/: page.tsx
Assignments/Quarter-2/Next.js/Assignment-4/person-name/app/about/: page.tsx
Assignments/Quarter-2/Next.js/Assignment-4/person-name/app/contact/: page.tsx
Assignments/Quarter-2/Next.js/Assignment-5/registration-form/: package-lock.json
Assignments/Quarter-2/Next.js/Assignment-5/registration-form/app/: commontypes.ts
Assignments/Quarter-2/Next.js/Assignment-5/registration-form/app/registration/: page.tsx
Assignments/Quarter-2/Next.js/Assignment-6/expense-tracker/: package.json
Assignments/Quarter-2/Next.js/Assignment-6/expense-tracker/app/: globals.css
Assignments/Quarter-2/Next.js/Assignment-6/expense-tracker/app/Types/: commontypes.ts  componentstypes.ts
Assignments/Quarter-2/Next.js/Assignment-6/expense-tracker/app/components/: expenselist.tsx  expensemodel.tsx
Assignments/Quarter-2/Next.js/Assignment-6/expense-tracker/app/expense/: page.tsx
Assignments/Quarter-2/Next.js/Assignment-7/api-intigeration/: package-lock.json  package.json
Assignments/Quarter-2/Next.js/Assignment-8/cms-api/: package.json
Assignments/Quarter-2/Next.js/Assignment-8/cms-api/app/Config/: contentful.ts
Assignments/Quarter-3/Python-API/Assignment-1/FastAPI_Basic/in_memory_students_crud/: main.py
Assignments/Quarter-3/Python/Assignment-1/FastAPI_Basic/: README.md  pyproject.toml
Assignments/Quarter-3/Python/Assignment-1/FastAPI_Basic/in_memory_students_crud/: students.py
Assignments/Quarter-3/Python/Python-Basic/main/: main.py
Assignments/Quarter-4/Docker/dockerCompose/: Dockerfile  package-lock.json
Assignments/Quarter-4/LangBasic/: pyproject.toml
Assignments/Quarter-4/LangBasic/main/: main.py
Assignments/Quarter-4/LangChain-RAG-Average/: pyproject.toml
Assignments/Quarter-4/LangChain-RAG-Average/ragmain/: .env  main.py
Assignments/Quarter-4/LangChain-RAG_Basic/: pyproject.toml
Assignments/Quarter-4/LangChain-RAG_Basic/ragmain/: main.py
Assignments/Quarter-4/LangGemini/: pyproject.toml
Assignments/Quarter-4/LangGemini/main/: .env  main.py
Assignments/Quarter-4/LangchainTools/: pyproject.toml
Assignments/Quarter-4/LangchainTools/main/: .env  main.py
Assignments/Quarter-5/CrewAI-basic/: pyproject.toml
Assignments/Quarter-5/CrewAI-basic/main/: .env  main.py
Assignments/Quarter-5/CrewAI/agent_knowledge/: pyproject.toml
Assignments/Quarter-5/CrewAI/agent_knowledge/main/: .env  main.py
Assignments/Quarter-5/CrewAI/fun-fact-flow/: pyproject.toml
Assignments/Quarter-5/CrewAI/fun-fact-flow/main/: .env  main.py
Assignments/Quarter-5/LangGraph/: pyproject.toml
Assignments/Quarter-5/LangGraph/langagent/: .env  main.py
Assignments/Quarter-5/Longterm-Memory/: pyproject.toml
Assignments/Quarter-5/Longterm-Memory/langgraf/: .env  LTM.py
Assignments/Quarter-5/Prompt-Engineering/: hello.py
Assignments/Quarter-5/Todo-Agents/: pyproject.toml
Assignments/Quarter-5/Todo-Agents/main/: .env  main.py  streamUI.py
Assignments/Quarter-5/try/test/: hello.py  pyproject.toml
(+6 files in other folders)
