[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Abrar-Kamoka <abrarabbas.ak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
crewai = {extras = ["tools"], version = "^0.102.0"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
