[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Abrar-Kamoka <abrarabbas.ak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
sqlmodel = "^0.0.22"
fastapi = "^0.115.6"
langchain-community = "^0.3.14"
langchain-google-genai = "^2.0.7"
langgraph = "^0.2.60"
psycopg = "^3.2.3"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
