[tool.poetry]
name = "in-memory-students-crud"
version = "0.1.0"
description = ""
authors = ["Abrar_Kamoka <abrarabbas.ak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[tool.poetry.scripts]
pye = "in_memory_students_crud.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
